--- a/eam/view/view-eam/src/main/resources/public/business/eam/tpl_file/tpl_file_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/tpl_file/tpl_file_form.html
@@ -34,6 +34,13 @@
 
         <div class="layui-row form-row">
 
+            <div class="layui-form-item" style="display: none">
+                <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('主键')}">主键</div></div>
+                <div class="layui-input-block layui-input-block-c1">
+                    <input lay-filter="id" id="id" name="id" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('主键') }" type="text" class="layui-input"  />
+                </div>
+            </div>
+
              <!--开始：group 循环-->
             <div class="layui-col-xs4 form-column">
 
